--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.2-jie-pf.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.2-jie-pf.md
@@ -4,26 +4,28 @@
 >
 >**本章节来自网络，可能存在版权问题。**
 
-OpenBSD Packet Filter(PF) 是一款自 OpenBSD 移植来的防火墙，提供了大量功能，包括 ALTQ (Alternate Queuing，交错队列)。以下仅供参考，未经测试。
+PF（Packet Filter）是一款由 OpenBSD 移植而来的防火墙，提供了大量功能，包括 ALTQ (Alternate Queuing，交错队列)等。以下仅供参考，未经测试。
 
-如需启用，可以在终端执行命令：
+## 启用 PF
 
 ```sh
-# cp /usr/share/examples/pf/pf.conf /etc #复制示例文件作为默认配置规则集文件，否则 pf 无法启动
-# service pf enable #设置 pf 开机启动，也可以通过 bsdconfig 设置 pf_enable
-# service pf start  #启动 pf
+# cp /usr/share/examples/pf/pf.conf /etc # 复制示例文件作为默认配置规则集文件，否则 pf 无法启动
+# service pf enable # 设置 pf 开机启动
+# service pf start  # 启动 pf
 ```
+
+## `pfctl`
 
 pf 的管理命令为 `pfctl`，常用操作示例如下：
 
 ```sh
-# pfctl -e #启动 pf，相当于 service pf start
+# pfctl -e # 启动 pf，相当于 service pf start
 
-# pfctl -d #停止 pf，相当于 server pf stop
+# pfctl -d # 停止 pf，相当于 server pf stop
 
-# pfctl -f /etc/pf.conf #加载规则集文件中的规则
+# pfctl -f /etc/pf.conf # 加载规则集文件中的规则
 
-# pfctl -nf /etc/pf.conf #解析规则，但不加载。-f 参数还可以与其他参数配合，如 -N 表示只载入 NAT 规则，-R 表示只载入过滤规则，-A 只载入队列规则，-O 只载入选项规则
+# pfctl -nf /etc/pf.conf # 解析规则，但不加载。-f 参数还可以与其他参数配合，如 -N 表示只载入 NAT 规则，-R 表示只载入过滤规则，-A 只载入队列规则，-O 只载入选项规则
 
 # pfctl -s all #查看 pf 所有对象信息，如果想查看特定对象信息，可以用 nat、queue、rules、Anchors、states、 Sources、info、Running、labels、timeouts、memory、Tables、osfp、Interfaces 替换 all
 
