--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.3-jie-ipfw.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.3-jie-ipfw.md
@@ -1,17 +1,15 @@
 # 第 15.3 节 IPFW
 
->**注意**
+>**警告**
 >
 >**本章节来自网络，可能存在版权问题；且未经验证，并不可靠。**
 
 
-## 介绍说明：
+IPFIREWALL (IPFW) 是一款由 FreeBSD 发起的防火墙应用软件，它由 FreeBSD 项目编写和维护。
 
-IPFIREWALL (IPFW) 是一个由 FreeBSD 发起的防火墙应用软件，它由 FreeBSD 的志愿者成员编写和维护。
+ipfw 已经默认被编译进内核了，它默认会有一条规则，规则号为 `65536`，是不可以删除的：这条规则会把所有流量都切断。故在还未配置好之前，千万不要随意启动 ipfw，否则就会面临无法远程连接 FreeBSD 的问题。
 
-在 FreeBSD 12 中，ipfw 已经默认被编译进内核了，它默认会有一条规则，规则号为 `65536`，是不可以删除的，这条规则会把所有流量都切断，所以还没配置好之前，千万不要随意启动 ipfw，否则就会面临无法连上远程 FreeBSD 的问题。
-
-## 配置 ipfw：
+## 配置 ipfw
 
 执行以下命令：
 
