--- a/di-24-zhang-freebsd-te-se/di-24.1-jie-bsd-init-guan-li-fu-wu.md
+++ b/di-24-zhang-freebsd-te-se/di-24.1-jie-bsd-init-guan-li-fu-wu.md
@@ -7,7 +7,7 @@ FreeBSD 使用传统的 BSD init 管理系统服务。
 - 启动服务：`# service xxx start`
 - 停止服务：`# service xxx stop`
 - 重启服务：`# service xxx restart`
-- 添加服务并开机自启：`service xxx enable`
+- 添加服务并开机自启：`service xxx enable`（并非全部，仍有缺陷）
 - 禁用开机启动：`# service xxx disable`
 - 删除启动项：`# service xxx delete`
 
