--- a/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.7.md
@@ -2,7 +2,7 @@
 
 ## 登录到 FreeBSD
 
-当你安装 FreeBSD 后，如果一切正常，你应该会在屏幕上看到以下内容：
+当你安装 FreeBSD 后，若一切正常，你应该会在屏幕上看到以下内容：
 
 ```sh
 FreeBSD/amd64 (ykla) (ttyv0)
@@ -57,7 +57,7 @@ root@ykla:~ #
 >
 >密码并不会被回显打印到屏幕上：一般我们输入密码时，屏幕上会显示 `******`。但是在 FreeBSD 中，凡是涉及密码的地方大都不会有任何显示，即使输入了密码屏幕上也是空白的，和没有任何输入是一个状态，就是什么也没有，输入后回车即可。
 
-①：root 是 UNIX 中的最高权限。我们常说的安卓 root，苹果越狱，kindle 越狱等等都是为了获取这个 root 权限权限。
+①：root 是 UNIX 中的最高权限。我们常说的安卓 root，苹果越狱，Kindle 越狱等等都是为了获取这个 root 权限权限。
 
 ### 故障排除
 
@@ -84,8 +84,6 @@ login:
 ### 参考文献
 
 - [What is TTY in Linux?](https://itsfoss.com/what-is-tty-in-linux/)，翻译在 [Linux 黑话解释：TTY 是什么？](https://linux.cn/article-14093-1.html)。
-
-
 
 ## 命令行格式
 
@@ -140,9 +138,6 @@ drwxrwxrwt  2 root    wheel  2 Mar 18 17:10 .font-unix
 >
 >可以看到，shell 会将整个句子当成一个可执行的命令去执行。
 
-
-
-
 我们还需要知道，命令是不具有自动纠错功能的，哪怕只是打错了一个字母，少了一个数字，命令也绝不会执行成功：
 
 ```sh
@@ -167,7 +162,7 @@ usage: ls [-ABCFGHILPRSTUWZabcdfghiklmnopqrstuvwxy1,] [--color=when] [-D format]
 
 ### thefuck：自动纠正错误拼写的命令
 
-#### 安装
+#### 安装 thefuck
 
 使用 pkg
 
@@ -182,7 +177,7 @@ usage: ls [-ABCFGHILPRSTUWZabcdfghiklmnopqrstuvwxy1,] [--color=when] [-D format]
 # make install clean
 ```
 
-#### 配置
+#### 配置 thefuck
 
 查看安装后配置信息
 
@@ -479,7 +474,7 @@ wait
 ### FreeBSD
 
 ```sh
-root@ykla:~ # type cd
+$ type cd
 cd is a shell builtin
 ```
 
@@ -488,7 +483,7 @@ cd is a shell builtin
 如果你配置了 pkgbase，则输出类似：
 
 ```sh
-root@ykla:~ # pkg which /bin/ls
+# pkg which /bin/ls
 /bin/ls was installed by package FreeBSD-runtime-15.snap20250313173555
 
 ```
@@ -502,28 +497,28 @@ root@ykla:~ # pkg which /bin/ls
 - 查看当前登录系统的用户名：
 
 ```sh
-ykla@ykla:~ $ whoami
+$ whoami
 ykla
 ```
 
 - 查看当前登录用户用户组相关
 
 ```sh
-ykla@ykla:~ $ id
+$ id
 uid=1001(ykla) gid=1001(ykla) groups=1001(ykla),0(wheel)
 ```
 
 - 查看当前用户登录的中断及本次登录时间
 
 ```sh
-ykla@ykla:~ $ who
+$ who
 root             pts/0        Mar 19 15:00 (3413e8b6b43f)
 ```
 
 - 展示当前有哪些用户已登录，并且他们在干什么
 
 ```sh
-ykla@ykla:~ $ w
+$ w
  3:02PM  up 21:52, 1 user, load averages: 0.01, 0.01, 0.00
 USER       TTY      FROM           LOGIN@  IDLE WHAT
 root       pts/0    3413e8b6b43f   3:00PM     - w
@@ -771,7 +766,7 @@ $ rm -rf /home/ykla/test/
 >```
 >![](../.gitbook/assets/noefi.png)
 >
->重启发现连引导都没了。
+>重启后你会发现连引导都没了。
 >
 >>**思考题**
 >>
