--- a/di-2-zhang-an-zhuang-freebsd/2.13-refind.md
+++ b/di-2-zhang-an-zhuang-freebsd/2.13-refind.md
@@ -2,6 +2,8 @@
 
 在 BIOS 来回切换确实很麻烦，我们可以借助 [rEFInd](https://www.rodsbooks.com/refind/) 实现类似 Clover 的效果，在开机时选择我们要进入的操作系统。
 
+`rEFInd` 复刻自 `rEFIt`，源自对“refind”（改进、完美）和“EFI”（Extensible Firmware Interface，可扩展固件接口）两个词的组合，即修改 UEFI。
+
 打开下载页面 [Getting rEFInd from Sourceforge](https://www.rodsbooks.com/refind/getting.html)，点击 `A binary zip file` 即可自动转跳下载。写作本文使用到了 `refind-bin-0.14.2.zip`。
 
 该文件中只有一部分是有用的启动文件。我们只需要其中的 `refind` 文件夹，其他的不需要。
@@ -68,7 +70,7 @@
 
 rEFInd 有多款主题可选。
 
-本例采用 Matrix-rEFInd 进行说明。
+本例采用 Matrix-rEFInd（电影《黑客帝国》） 进行说明。
 
 项目地址：[Matrix-rEFInd](https://github.com/Yannis4444/Matrix-rEFInd/)
 
