--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.4-jie-yin-dao-jie-mian.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.4-jie-yin-dao-jie-mian.md
@@ -34,6 +34,38 @@ autoboot_delay="2"
 
 ## 调整引导界面和 TTY 分辨率
 
+### 屏幕保护
+
+#### `bsdconfig`
+
+```sh
+# bsdconfig
+```
+
+选择屏保图片：主菜单中的 `7 Console`——>`5 Saver     Configure the screen saver`——>此处我选择 `3 Beastie "BSD Daemon" animated screen saver (graphics)`。
+
+设定屏幕超时时间：主菜单中的 `7 Console`——>`5 Saver     Configure the screen saver`——>`Timeout   Set the screen saver timeout interval`，单位是秒。
+
+#### 手动写入
+
+编辑 `/etc/rc.conf`
+
+```sh
+saver="beastie" # 选择屏保图片
+blanktime="300" # 屏幕超时时间
+```
+
+有哪些图片可选：
+
+```sh
+root@ykla:~ # ls /boot/kernel/*saver*
+/boot/kernel/beastie_saver.ko	/boot/kernel/fire_saver.ko	/boot/kernel/snake_saver.ko
+/boot/kernel/blank_saver.ko	/boot/kernel/green_saver.ko	/boot/kernel/star_saver.ko
+/boot/kernel/daemon_saver.ko	/boot/kernel/logo_saver.ko	/boot/kernel/warp_saver.ko
+/boot/kernel/dragon_saver.ko	/boot/kernel/plasma_saver.ko
+/boot/kernel/fade_saver.ko	/boot/kernel/rain_saver.ko
+```
+
 ### 修改“gop”（通用方法）
 
 在出来 FreeBSD 菜单的时候，按下 **ESC** 键，脱离引导。会出现提示符 `OK `。输入 `gop list` 可以看到所有支持的分辨率列表：
