--- a/di-24-zhang-freebsd-te-se/di-24.1-jie-bsd-init-guan-li-fu-wu.md
+++ b/di-24-zhang-freebsd-te-se/di-24.1-jie-bsd-init-guan-li-fu-wu.md
@@ -81,6 +81,29 @@ XXX_enable="YES"
 2. 用户自定义的配置位于 `/etc/rc.conf`。例如，如果想让系统自动启动 ssh、ipfw、nginx 等服务，就要修改该文件。**注意，`/etc/rc.conf` 的优先级高于 `/etc/defaults/rc.conf`；即 `/etc/rc.conf` 会覆盖 `/etc/defaults/rc.conf`。**
 3. 基本系统的服务脚本位于 `/etc/rc.d/`。第三方应用的服务脚本位于 `/usr/local/etc/rc.d/`。
 
+### 开关机执行启动项
+
+可写入 `sddm_enable=“YES”` 类似项目。
+
+- 开机执行脚本（默认不存在，自行创建）
+
+```sh
+/etc/rc.local
+```
+
+- 关机执行脚本（默认不存在，自行创建）
+
+```sh
+/etc/rc.shutdown.local
+```
+
+- 测试
+
+```sh
+root@ykla:~ # /etc/rc.d/local start
+Starting local daemons:.
+```
+
 ### 查询默认 `rc.conf` 配置文件
 
 >**技巧**
