--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
@@ -12,15 +12,17 @@
 
 并重新登录即可。
 
-问：如何让 FreeBSD 的 csh 像 bash 那样按 Tab 列出列出无法补齐的候选文件？
-
-答：标准的方法是按 `Ctrl+D`。
+>**技巧**
+>
+>如何让 FreeBSD 的 csh 像 bash 那样按 Tab 列出列出无法补齐的候选文件？
+>
+>按 `Ctrl+D`。
 
 但如果一定要用 `Tab` 的话，在 `/etc/csh.cshrc`中加入：`set autolist`
 
 ## FreeBSD 如何让 csh 像 zsh 那样具有命令错误修正呢
 
-比如你用 emacs 写 c 语言程序，但你输完 `emacs ma` 按 `Tab` 回车是，他会匹配所有 `ma` 开头的文件，而这个是忽略掉，也就是按 `Tab` 时不会在有你忽略的东西，对编程之类的友好，不用再匹配到二进制。`.o` 之类的文件，
+比如你用 emacs 写 c 语言程序，但你输完 `emacs ma` 按 `Tab` 回车：他会匹配所有 `ma` 开头的文件。而这个是忽略掉，也即按 `Tab` 时不会再有你忽略的东西。编程友好，不用再匹配到二进制 `.o` 之类的文件，
 
 ```sh
 　set correct = cmd lz/usr/bin tcsh>ls /usr/bin (y|n|e|a)?
@@ -29,9 +31,11 @@
 
 ## 更换默认 shell
 
-警告：切换默认 `Shell` 会导致 **恢复模式无法正常启动加载命令行环境**。
+>**警告**
+>
+>切换默认 `Shell` 会导致 **恢复模式无法正常启动加载命令行环境**。
 
-例如切换到 zsh：
+### 切换到 zsh：
 
 ```sh
 # pkg install zsh zsh-autosuggestions zsh-syntax-highlighting
@@ -51,7 +55,7 @@ source /usr/local/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 source ~/.p10k.zsh
 ```
 
-切换到 bash：
+### 切换到 bash
 
 ```sh
 # pkg install bash
