--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
@@ -1,5 +1,33 @@
 # 第 15.1 节 网络参数配置命令
 
+## `/etc/rc.conf` 相关
+
+`/etc/rc.conf`：
+
+```ini
+hostname="ykla" # 主机名，不能为空，否则无法使用 xorg
+ifconfig_igc0="DHCP" # 让网卡 igc0 使用 DHCP
+ifconfig_igc0="inet 192.168.31.77  netmask 255.255.255.0" # 设置网卡 igc0 的 IPv4 为 192.168.31.77，子网掩码为 255.255.255.0（静态 IP）
+defaultrouter="192.168.31.1" # 默认网关/默认路由，一般是路由 IP
+ifconfig_igc0_alias0="inet 192.168.1.33 netmask 255.255.255.0" # 设置网卡 igc0 别名 IPv4 192.168.1.33，子网掩码为 255.255.255.0。即拥有额外的 IPv4 地址
+static_routes="static1 static2" # 静态路由，结合下方使用①
+route_static1="-net 10.0.10.0/24 10.0.1.1" # 如果要访问 10.0.10.0/24 这个网络（10.0.10.0 到 10.0.10.254），就把数据包发送给 10.0.1.1，由它来转发
+route_static2="-net 172.16.30.0/24 172.16.1.254" # 如果要访问 172.16.30.0/24  这个网络（172.16.30.1 到 172.16.30.254），就把数据包发送给 172.16.1.254，由它来转发
+```
+
+①在 `/etc/rc.conf` 中如果要一次写多个配置，只能写成 `ABC_XYZ="xxx yyy ccc ddd"` 这种格式。
+
+如果在 `/etc/rc.conf` 中写成
+
+```ini
+ABC_XYZ="xxx" # 第一行
+ABC_XYZ="yyy"
+ABC_XYZ="ccc"
+ABC_XYZ="ddd"
+```
+
+这种形式，只有第一行会生效，其余 `ABC_XYZ` 配置行不会生效！
+
 ## 作为网关服务器
 
 打开 IP 转发功能：
