--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
@@ -8,7 +8,7 @@
 hostname="ykla" # 主机名，不能为空，否则无法使用 xorg
 ifconfig_igc0="DHCP" # 让网卡 igc0 使用 DHCP
 ifconfig_igc0="inet 192.168.31.77  netmask 255.255.255.0" # 设置网卡 igc0 的 IPv4 为 192.168.31.77，子网掩码为 255.255.255.0（静态 IP）
-defaultrouter="192.168.31.1" # 默认网关/默认路由，一般是路由 IP
+defaultrouter="192.168.31.1" # 默认网关/默认路由，在家中一般是路由器 IP
 ifconfig_igc0_alias0="inet 192.168.1.33 netmask 255.255.255.0" # 设置网卡 igc0 别名 IPv4 192.168.1.33，子网掩码为 255.255.255.0。即拥有额外的 IPv4 地址
 static_routes="static1 static2" # 静态路由，结合下方使用①
 route_static1="-net 10.0.10.0/24 10.0.1.1" # 如果要访问 10.0.10.0/24 这个网络（10.0.10.0 到 10.0.10.254），就把数据包发送给 10.0.1.1，由它来转发
