--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.4-jie-yin-dao-jie-mian.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.4-jie-yin-dao-jie-mian.md
@@ -32,11 +32,10 @@ autoboot_delay="2"
 - [rc.conf -- system configuration information](https://man.freebsd.org/cgi/man.cgi?rc.conf(5))
 - [acpi -- Advanced	Configuration and Power	Management support](https://man.freebsd.org/cgi/man.cgi?acpi(4))
 
-## 调整引导界面和 TTY 分辨率
 
-### 屏幕保护
+## 屏幕保护
 
-#### `bsdconfig`
+### `bsdconfig`
 
 ```sh
 # bsdconfig
@@ -46,7 +45,7 @@ autoboot_delay="2"
 
 设定屏幕超时时间：主菜单中的 `7 Console`——>`5 Saver     Configure the screen saver`——>`Timeout   Set the screen saver timeout interval`，单位是秒。
 
-#### 手动写入
+### 手动写入
 
 编辑 `/etc/rc.conf`
 
@@ -65,6 +64,10 @@ root@ykla:~ # ls /boot/kernel/*saver*
 /boot/kernel/dragon_saver.ko	/boot/kernel/plasma_saver.ko
 /boot/kernel/fade_saver.ko	/boot/kernel/rain_saver.ko
 ```
+
+## 调整引导界面和 TTY 分辨率
+
+
 
 ### 修改“gop”（通用方法）
 
