--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
@@ -37,23 +37,97 @@
 
 ### 切换到 zsh：
 
+#### 安装 zsh
+
+- 使用 pkg 安装：
+
 ```sh
 # pkg install zsh zsh-autosuggestions zsh-syntax-highlighting
-# chsh -s /usr/local/bin/zsh
-# touch ~/.zshrc
 ```
+
+|程序|说明|
+|:----:|:----:|
+|`zsh`|zsh shell|
+|`zsh-autosuggestions`|类 Fish shell 的 Zsh 自动补全|
+|`zsh-syntax-highlighting`|类 Fish shell 的 Zsh 语法高亮|
+
+- 使用 ports 安装：
+
+```
+# cd /usr/ports/shells/zsh/ && make install clean
+# cd /usr/ports/shells/zsh-autosuggestions/ && make install clean
+# cd /usr/ports/shells/zsh-syntax-highlighting/ && make install clean
+```
+
+#### 查看安装后说明
 
 ```sh
-# ee ~/.zshrc
+root@ykla:/home/ykla # pkg info -D zsh
+zsh-5.9_5:
+On install:
+==========================================================
+
+By default, zsh looks for system-wide defaults in
+/usr/local/etc.
+
+If you previously set up /etc/zprofile, /etc/zshenv, etc.,
+either move them to /usr/local/etc or rebuild zsh with the
+ETCDIR option enabled. # 如果之前在其他 shell 有任何配置，需要转移格式到 ~/.zshrc
+
+==========================================================
+root@ykla:/home/ykla # pkg info -D zsh-autosuggestions
+zsh-autosuggestions-0.7.1:
+On install:
+Add the line below to your .zshrc to enable auto suggestions.
+
+source /usr/local/share/zsh-autosuggestions/zsh-autosuggestions.zsh # 要求加入此行到 ~/.zshrc
+
+root@ykla:/home/ykla # pkg info -D zsh-syntax-highlighting
+zsh-syntax-highlighting-0.8.0,1:
+On install:
+Add the line below to *the end of* your .zshrc to enable highlighting.
+
+source /usr/local/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh # 要求加入此行 ~/.zshrc
+```
+#### 配置 zsh
+
+```sh
+# chsh -s /usr/local/bin/zsh # 切换 shell 至 zsh
+chsh: user information updated
 ```
 
-添加下面几行：
+编辑 `~/.zshrc`（会自动创建），添加下面几行：
 
 ```sh
 source /usr/local/share/zsh-autosuggestions/zsh-autosuggestions.zsh
 source /usr/local/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
-source ~/.p10k.zsh
 ```
+
+立即使用：
+
+```
+# zsh # 将当前shell 切换到 zsh
+# source ~/.zshrc # 刷新环境变量
+```
+
+##### 使用主题美化
+
+```sh
+# git clone --depth=1 https://github.com/romkatv/powerlevel10k.git ~/powerlevel10k
+# echo 'source ~/powerlevel10k/powerlevel10k.zsh-theme' >>~/.zshrc
+```
+
+刷新环境变量
+
+```sh
+# source ~/.zshrc
+```
+
+回答几个问题即可完成配置。
+
+###### 参考文献
+
+- [Powerlevel10k](https://github.com/romkatv/powerlevel10k?tab=readme-ov-file#installation)。主题项目官网
 
 ### 切换到 bash
 
