--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
@@ -1,10 +1,12 @@
-# 第 22.9 节 Csh 与其他 Shell
+# 第 22.9 节 Shell
 
-## FreeBSD csh shell 配置
+## 配置 csh shell 
+
+csh 是 FreeBSD 基本系统内置的 shell，**过去**是 root 用户的默认 shell。
 
 > **注意**
 >
-> 此部分可能不再具有现实意义，[因为 FreeBSD 14 中的 shell 被统一为了 sh](https://github.com/freebsd/freebsd-src/commit/d410b585b6f00a26c2de7724d6576a3ea7d548b7)。
+> [ FreeBSD 14 中的 shell 被统一为了 sh](https://github.com/freebsd/freebsd-src/commit/d410b585b6f00a26c2de7724d6576a3ea7d548b7)。
 
 在 `/etc/csh.cshrc` 里面加入：
 
@@ -20,7 +22,7 @@
 
 但如果一定要用 `Tab` 的话，在 `/etc/csh.cshrc`中加入：`set autolist`
 
-## FreeBSD 如何让 csh 像 zsh 那样具有命令错误修正呢
+### 如何让 csh 像 zsh 那样具有命令错误修正呢
 
 比如你用 emacs 写 c 语言程序，但你输完 `emacs ma` 按 `Tab` 回车：他会匹配所有 `ma` 开头的文件。而这个是忽略掉，也即按 `Tab` 时不会再有你忽略的东西。编程友好，不用再匹配到二进制 `.o` 之类的文件，
 
@@ -29,15 +31,10 @@
 　set fignore = (.o ~) emacs ma[^D] main.c main.c~ main.o emacs ma[tab] emacs main.c
 ```
 
-## 更换默认 shell
 
->**警告**
->
->切换默认 `Shell` 会导致 **恢复模式无法正常启动加载命令行环境**。
+## 切换到 zsh：
 
-### 切换到 zsh：
-
-#### 安装 zsh
+### 安装 zsh
 
 - 使用 pkg 安装：
 
@@ -59,7 +56,7 @@
 # cd /usr/ports/shells/zsh-syntax-highlighting/ && make install clean
 ```
 
-#### 查看安装后说明
+### 查看安装后说明
 
 ```sh
 root@ykla:/home/ykla # pkg info -D zsh
@@ -89,7 +86,7 @@ Add the line below to *the end of* your .zshrc to enable highlighting.
 
 source /usr/local/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh # 要求加入此行 ~/.zshrc
 ```
-#### 配置 zsh
+### 配置 zsh shell
 
 ```sh
 # chsh -s /usr/local/bin/zsh # 切换 shell 至 zsh
@@ -105,12 +102,12 @@ source /usr/local/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 
 立即使用：
 
-```
-# zsh # 将当前shell 切换到 zsh
+```sh
+# zsh # 将当前 shell 切换到 zsh
 # source ~/.zshrc # 刷新环境变量
 ```
 
-##### 使用主题美化
+#### 使用主题美化
 
 ```sh
 # git clone --depth=1 https://github.com/romkatv/powerlevel10k.git ~/powerlevel10k
@@ -123,17 +120,42 @@ source /usr/local/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 # source ~/.zshrc
 ```
 
-回答几个问题即可完成配置。
+回答几个问题即可完成配置。重启后完成配置。
 
-###### 参考文献
+
+##### 参考文献
 
 - [Powerlevel10k](https://github.com/romkatv/powerlevel10k?tab=readme-ov-file#installation)。主题项目官网
 
-### 切换到 bash
+## 切换到 bash shell
+
+### 安装 bash
+
+- 使用 pkg 安装：
 
 ```sh
 # pkg install bash
-# chsh -s /usr/local/bin/bash
-# ee ~/.bash_profile
 ```
 
+- 使用 ports 安装：
+
+```sh
+# cd /usr/ports/shells/bash/
+# make install clean
+```
+
+### 配置 bash
+
+```sh
+# chsh -s /usr/local/bin/bash # 切换到 bash
+# touch ~/.bash_profile #  创建所需变量
+# ee ~/.bash_profile # 写入所需变量
+```
+
+
+立即使用：
+
+```
+# bash # 将当前 shell 切换到 bash
+# source ~/.bash_profile # 刷新环境变量
+```
