--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
@@ -1,10 +1,12 @@
-# 第 22.9 节 Csh 与其他 Shell
+# 第 22.9 节 Shell
 
-## FreeBSD csh shell 配置
+## 配置 csh shell 
+
+csh 是 FreeBSD 基本系统内置的 shell，**过去**是 root 用户的默认 shell。
 
 > **注意**
 >
-> 此部分可能不再具有现实意义，[因为 FreeBSD 14 中的 shell 被统一为了 sh](https://github.com/freebsd/freebsd-src/commit/d410b585b6f00a26c2de7724d6576a3ea7d548b7)。
+> [ FreeBSD 14 中的 shell 被统一为了 sh](https://github.com/freebsd/freebsd-src/commit/d410b585b6f00a26c2de7724d6576a3ea7d548b7)。
 
 在 `/etc/csh.cshrc` 里面加入：
 
@@ -20,7 +22,7 @@
 
 但如果一定要用 `Tab` 的话，在 `/etc/csh.cshrc`中加入：`set autolist`
 
-## FreeBSD 如何让 csh 像 zsh 那样具有命令错误修正呢
+### 如何让 csh 像 zsh 那样具有命令错误修正呢
 
 比如你用 emacs 写 c 语言程序，但你输完 `emacs ma` 按 `Tab` 回车：他会匹配所有 `ma` 开头的文件。而这个是忽略掉，也即按 `Tab` 时不会再有你忽略的东西。编程友好，不用再匹配到二进制 `.o` 之类的文件，
 
@@ -29,37 +31,131 @@
 　set fignore = (.o ~) emacs ma[^D] main.c main.c~ main.o emacs ma[tab] emacs main.c
 ```
 
-## 更换默认 shell
 
->**警告**
->
->切换默认 `Shell` 会导致 **恢复模式无法正常启动加载命令行环境**。
+## 切换到 zsh：
 
-### 切换到 zsh：
+### 安装 zsh
+
+- 使用 pkg 安装：
 
 ```sh
 # pkg install zsh zsh-autosuggestions zsh-syntax-highlighting
-# chsh -s /usr/local/bin/zsh
-# touch ~/.zshrc
 ```
+
+|程序|说明|
+|:----:|:----:|
+|`zsh`|zsh shell|
+|`zsh-autosuggestions`|类 Fish shell 的 Zsh 自动补全|
+|`zsh-syntax-highlighting`|类 Fish shell 的 Zsh 语法高亮|
+
+- 使用 ports 安装：
+
+```
+# cd /usr/ports/shells/zsh/ && make install clean
+# cd /usr/ports/shells/zsh-autosuggestions/ && make install clean
+# cd /usr/ports/shells/zsh-syntax-highlighting/ && make install clean
+```
+
+### 查看安装后说明
 
 ```sh
-# ee ~/.zshrc
+root@ykla:/home/ykla # pkg info -D zsh
+zsh-5.9_5:
+On install:
+==========================================================
+
+By default, zsh looks for system-wide defaults in
+/usr/local/etc.
+
+If you previously set up /etc/zprofile, /etc/zshenv, etc.,
+either move them to /usr/local/etc or rebuild zsh with the
+ETCDIR option enabled. # 如果之前在其他 shell 有任何配置，需要转移格式到 ~/.zshrc
+
+==========================================================
+root@ykla:/home/ykla # pkg info -D zsh-autosuggestions
+zsh-autosuggestions-0.7.1:
+On install:
+Add the line below to your .zshrc to enable auto suggestions.
+
+source /usr/local/share/zsh-autosuggestions/zsh-autosuggestions.zsh # 要求加入此行到 ~/.zshrc
+
+root@ykla:/home/ykla # pkg info -D zsh-syntax-highlighting
+zsh-syntax-highlighting-0.8.0,1:
+On install:
+Add the line below to *the end of* your .zshrc to enable highlighting.
+
+source /usr/local/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh # 要求加入此行 ~/.zshrc
+```
+### 配置 zsh shell
+
+```sh
+# chsh -s /usr/local/bin/zsh # 切换 shell 至 zsh
+chsh: user information updated
 ```
 
-添加下面几行：
+编辑 `~/.zshrc`（会自动创建），添加下面几行：
 
 ```sh
 source /usr/local/share/zsh-autosuggestions/zsh-autosuggestions.zsh
 source /usr/local/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
-source ~/.p10k.zsh
 ```
 
-### 切换到 bash
+立即使用：
+
+```sh
+# zsh # 将当前 shell 切换到 zsh
+# source ~/.zshrc # 刷新环境变量
+```
+
+#### 使用主题美化
+
+```sh
+# git clone --depth=1 https://github.com/romkatv/powerlevel10k.git ~/powerlevel10k
+# echo 'source ~/powerlevel10k/powerlevel10k.zsh-theme' >>~/.zshrc
+```
+
+刷新环境变量
+
+```sh
+# source ~/.zshrc
+```
+
+回答几个问题即可完成配置。重启后完成配置。
+
+
+##### 参考文献
+
+- [Powerlevel10k](https://github.com/romkatv/powerlevel10k?tab=readme-ov-file#installation)。主题项目官网
+
+## 切换到 bash shell
+
+### 安装 bash
+
+- 使用 pkg 安装：
 
 ```sh
 # pkg install bash
-# chsh -s /usr/local/bin/bash
-# ee ~/.bash_profile
 ```
 
+- 使用 ports 安装：
+
+```sh
+# cd /usr/ports/shells/bash/
+# make install clean
+```
+
+### 配置 bash
+
+```sh
+# chsh -s /usr/local/bin/bash # 切换到 bash
+# touch ~/.bash_profile #  创建所需变量
+# ee ~/.bash_profile # 写入所需变量
+```
+
+
+立即使用：
+
+```
+# bash # 将当前 shell 切换到 bash
+# source ~/.bash_profile # 刷新环境变量
+```
