--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
@@ -10,7 +10,9 @@ csh 是 FreeBSD 基本系统内置的 shell，**过去**是 root 用户的默认
 
 在 `/etc/csh.cshrc` 里面加入：
 
-`alias ls ls –G`
+```sh
+alias ls ls –G
+```
 
 并重新登录即可。
 
@@ -50,7 +52,7 @@ csh 是 FreeBSD 基本系统内置的 shell，**过去**是 root 用户的默认
 
 - 使用 ports 安装：
 
-```
+```sh
 # cd /usr/ports/shells/zsh/ && make install clean
 # cd /usr/ports/shells/zsh-autosuggestions/ && make install clean
 # cd /usr/ports/shells/zsh-syntax-highlighting/ && make install clean
@@ -146,7 +148,7 @@ source /usr/local/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 
 ### 配置 bash
 
-```sh
+```bash
 # chsh -s /usr/local/bin/bash # 切换到 bash
 # touch ~/.bash_profile #  创建所需变量
 # ee ~/.bash_profile # 写入所需变量
@@ -155,7 +157,7 @@ source /usr/local/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 
 立即使用：
 
-```
+```bash
 # bash # 将当前 shell 切换到 bash
 # source ~/.bash_profile # 刷新环境变量
 ```
