--- a/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
+++ b/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
@@ -4,6 +4,64 @@
 
 `bsdinstall` 是进入安装界面的命令。
 
-## bsdconfig
+`bsdinstall` 的用法参照 FreeBSD 图解安装章节。
 
-`bsdconfig` 命令的界面可以进行许多有用的设置，比如网络设置，需要注意的是，该界面无法连接 WiFi，因为无法输入密码。
+## `bsdconfig`
+
+`bsdconfig` 命令的界面可以进行许多有用的设置，比如网络设置。需要注意的是，该界面无法连接 WiFi，因为无法输入密码，已经报告 bug——[Cannot select any wifi or input password in bsdconfig](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=229883)。
+
+执行命令：
+
+```sh
+# bsdconfig
+```
+
+会输出：
+
+```sh
+                                        ┌────────────────────┤Main Menu├───────────────────┐
+                                        │ If you've already installed FreeBSD, you may use │
+                                        │ this menu to customize it somewhat to suit your  │
+                                        │ particular configuration.  Most importantly, you │
+                                        │ can use the Packages utility to load extra '3rd  │
+                                        │ party' software not provided in the base         │
+                                        │ distributions.                                   │
+                                        │ ┌──────────────────────────────────────────────┐ │
+                                        │ │         X Exit                               │ │
+                                        │ │         1 Usage                              │ │
+                                        │ │         2 Documentation installation         │ │
+                                        │ │         3 Packages                           │ │
+                                        │ │         4 Root Password                      │ │
+                                        │ │         5 Disk Management                    │ │
+                                        │ │         6 Login/Group Management             │ │
+                                        │ │         7 Console                            │ │
+                                        │ │         8 Timezone                           │ │
+                                        │ │         9 Mouse                              │ │
+                                        │ │         A Networking Management              │ │
+                                        │ │         B Security                           │ │
+                                        │ │         C Startup                            │ │
+                                        │ │         D Ttys                               │ │
+                                        │ └──────────────────────────────────────────────┘ │
+                                        ├──────────────────────────────────────────────────┤
+                                        │[      OK      ] [Exit bsdconfig] [     Help     ]│
+                                        └──────────────────────────────────────────────────┘
+```
+
+快捷键：选项由空格分隔，如 `1 Usage` 代表按数字键 `1` 可以选中该选项；`A Networking Management`，必须按大写的 A 才能选择此项。
+
+|选项|解释|
+|`X Exit`||
+|1 Usage||
+|2 Documentation installation||
+|3 Packages||
+|4 Root Password||
+|5 Disk Management||
+|6 Login/Group Management||
+|7 Console||
+|8 Timezone||
+|9 Mous||
+|A Networking Management||
+|B Security||
+|C Startup||
+|D Ttys||
+
