--- a/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
+++ b/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
@@ -8,7 +8,7 @@
 
 ## `bsdconfig`
 
-`bsdconfig` 命令的界面可以进行许多有用的设置，比如网络设置。需要注意的是，该界面无法连接 WiFi，因为无法输入密码，已经报告 bug——[Cannot select any wifi or input password in bsdconfig](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=229883)。
+如果你已经安装了 FreeBSD，可以使用此菜单对其进行一定程度的自定义，以适应你的自定义配置。最重要的是，你可以使用 pkg 工具加载额外的“第三方”软件，这些软件未包含在基本系统中。需要注意的是，该界面无法连接 WiFi，因为无法输入密码，已经报告 bug——[Cannot select any wifi or input password in bsdconfig](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=229883)。
 
 执行命令：
 
@@ -49,20 +49,25 @@
 
 快捷键：选项由空格分隔，如 `1 Usage` 代表按数字键 `1` 可以选中该选项；`A Networking Management`，必须按大写的 A 才能选择此项。
 
+
+
 |选项|解释|
 |:----|:----|
-|`X Exit`||
-|1 Usage||
-|2 Documentation installation||
-|3 Packages||
-|4 Root Password||
-|5 Disk Management||
-|6 Login/Group Management||
-|7 Console||
-|8 Timezone||
-|9 Mous||
-|A Networking Management||
-|B Security||
-|C Startup||
-|D Ttys||
+|X Exit|退出|
+|1 Usage|`bsdconfig` 使用说明|
+|2 Documentation installation|安装文档|
+|3 Packages|软件包|
+|4 Root Password|root 密码|
+|5 Disk Management|磁盘管咯|
+|6 Login/Group Management|登录管理/组管理|
+|7 Console|终端|
+|8 Timezone|时区|
+|9 Mous|鼠标|
+|A Networking Management|网络管理|
+|B Security|安全|
+|C Startup|启动项|
+|D Ttys|TTY|
+|OK|确认|
+|Exit bsdconfig|退出|
+|Help|帮助|
 
