--- a/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
+++ b/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
@@ -1,12 +1,7 @@
-# 第 24.3 节 bsdinstall 与 bsdconfig
+# 第 24.3 节 bsdconfig
 
-## bsdinstall
 
-`bsdinstall` 是进入安装界面的命令。
-
-`bsdinstall` 的用法参照 FreeBSD 图解安装章节。
-
-## `bsdconfig`
+## `bsdconfig` 主菜单
 
 如果你已经安装了 FreeBSD，可以使用此菜单对其进行一定程度的自定义，以适应你的自定义配置。最重要的是，你可以使用 pkg 工具加载额外的“第三方”软件，这些软件未包含在基本系统中。需要注意的是，该界面无法连接 WiFi，因为无法输入密码，已经报告 bug——[Cannot select any wifi or input password in bsdconfig](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=229883)。
 
@@ -47,7 +42,7 @@
                                         └──────────────────────────────────────────────────┘
 ```
 
-快捷键：选项由空格分隔，如 `1 Usage` 代表按数字键 `1` 可以选中该选项；`A Networking Management`，必须按大写的 A 才能选择此项。
+快捷键：选项由空格分隔，如 `1 Usage` 代表按数字键 `1` 可以选中该选项；`A Networking Management`，必须按大写的 `A` 才能选择此项。
 
 
 
@@ -58,7 +53,7 @@
 |2 Documentation installation|安装文档|
 |3 Packages|软件包|
 |4 Root Password|root 密码|
-|5 Disk Management|磁盘管咯|
+|5 Disk Management|磁盘管理|
 |6 Login/Group Management|登录管理/组管理|
 |7 Console|终端|
 |8 Timezone|时区|
@@ -71,3 +66,257 @@
 |Exit bsdconfig|退出|
 |Help|帮助|
 
+
+## 1 Usage 使用说明
+
+选中该项进入会弹出窗口，有一些文字说明，对应如下：
+
+---
+
+**如何使用此系统**
+
+======================
+
+\[阅读完本屏幕内容后，按 PageDown 键进入下一屏\]  
+
+在本次安装过程中，你将遇到的大多数对话框都支持以下按键操作：  
+
+| **按键**         | **操作**                                                |  
+|----------------|---------------------------------------------------|  
+| **空格键**      | 选择或切换当前项目。                                 |  
+| **回车键**      | 完成菜单或项目的操作。                               |  
+| **↑（上箭头）** | 移动到上一个项目（或在文本显示框中向上移动）。         |  
+| **↓（下箭头）** | 移动到下一个项目（或在文本显示框中向下移动）。         |  
+| **TAB**        | 移动到下一个项目或分组。                             |  
+| **→（右箭头）** | 移动到下一个项目或分组（与 TAB 相同）。              |  
+| **SHIFT + TAB** | 移动到上一个项目或分组。                             |  
+| **←（左箭头）** | 移动到上一个项目或分组（与 SHIFT + TAB 相同）。      |  
+| **PAGE UP**    | 在文本显示框中向上滚动一页。                         |  
+| **PAGE DOWN**  | 在文本显示框中向下滚动一页。                         |  
+| **F1**         | 显示相关的帮助文本。                                 |  
+
+如果你在菜单的边缘看到小的 `"^(-)"` 或 `"v(+)"` 符号，这表示由于屏幕空间不足，当前项目的上方或下方还有更多未显示的内容。在文本显示框中，当前位置以上的文本数量会以百分比形式显示在右下角。使用 **上 ↑ /下 ↓ 箭头键** 可逐行滚动，**PageUp/PageDown** 键可整页滚动。
+
+在菜单中选择 **OK** 将确认其控制的操作。选择 **Cancel** 将取消操作并通常返回上一级菜单。使用 **TAB** 可移动光标并选择按钮。
+
+大多数屏幕都有 **Help** 按钮 —— 请善用它！ 它通常提供有用的上下文相关提示，如果你在某个配置菜单中不确定该做什么，请选择 **Help**！
+
+**特殊功能**
+
+======================
+
+如果菜单项名称的首字母是唯一的，可以通过输入该字母来选择菜单项。通常情况下，它是项目的编号。
+
+控制台驱动程序包含回滚缓冲区，用于查看已滚动出屏幕的内容。要使用回滚功能，请按键盘上的 **Scroll Lock** 键，然后使用箭头键或 **Page Up/Page Down** 键滚动查看保存的文本。要退出回滚模式，再次按 **Scroll Lock** 键。此功能对于查看启动信息非常有用（快试试吧！），同时也适用于处理不使用菜单且输出往往滚动到屏幕顶部的子 Shell 或其他“专家模式”。
+
+FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行多个活动会话。使用 **ALT + F<数字>** 切换屏幕，其中 `F<数字>` 是对应你希望查看的屏幕的功能键。默认情况下，系统启用了 8 个虚拟控制台：你可以通过编辑 `/etc/ttys` 文件，将相关 vty 条目的 `"off"` 字段改为 `"on"` 来启用更多虚拟控制台（多达 12 个）。
+
+## 2 Documentation installation 安装文档
+
+```sh
+                  ┌───────────────┤FreeBSD Documentation Installation├───────────────┐
+                  │ This menu allows you to install the whole documentation set from │
+                  │ the FreeBSD Documentation Project: Handbook, FAQ, and articles.  │
+                  │                                                                  │
+                  │ Please select the language versions you wish to install. At      │
+                  │ minimum, you should install the English version, the original    │
+                  │ version of the documentation.                                    │
+                  │ ┌──────────────────────────────────────────────────────────────┐ │
+                  │ │         [ ] bn    Bengali Documentation                      │ │
+                  │ │         [ ] da    Danish Documentation                       │ │
+                  │ │         [ ] de    German Documentation                       │ │
+                  │ │         [ ] el    Greek Documentation                        │ │
+                  │ │         [X] en    English Documentation (recommended)        │ │
+                  │ │         [ ] es    Spanish Documentation                      │ │
+                  │ │         [ ] fr    French Documentation                       │ │
+                  │ │         [ ] hu    Hungarian Documentation                    │ │
+                  │ │         [ ] id    Indonesian Documentation                   │ │
+                  │ │         [ ] it    Italian Documentation                      │ │
+                  │ │         [ ] ja    Japanese Documentation                     │ │
+                  │ │         [ ] ko    Korean Documentation                       │ │
+                  │ │         [ ] mn    Mongolian Documentation                    │ │
+                  │ │         [ ] nl    Dutch Documentation                        │ │
+                  │ │         [ ] pl    Polish Documentation                       │ │
+                  │ │         [ ] pt    Portuguese Documentation                   │ │
+                  │ │         [ ] ru    Russian Documentation                      │ │
+                  │ │         [ ] tr    Turkish Documentation                      │ │
+                  │ └─↓↓↓───────────────────────────────────────────────────── 90%─┘ │
+                  ├──────────────────────────────────────────────────────────────────┤
+                  │                       [  OK  ]     [Cancel]                      │
+                  └───────────────── Use arrows, SPACE, TAB or ENTER ────────────────┘
+```
+
+没什么可说的，就是安装对应语言环境的文档。
+
+注意，没有必要安装中文文档（无论繁简），均大幅落后于英文文档。
+
+## 3 Packages 软件包
+
+`3 Packages` 可设置 FreeBSD 软件包的安装方式。
+
+```sh
+
+               ┌───────────────────────┤Choose Installation Media├───────────────────────┐
+               │ FreeBSD can be installed from a variety of different installation       │
+               │ media, ranging from floppies to an Internet FTP server.  If you're      │
+               │ installing FreeBSD from a supported CD/DVD drive then this is generally │
+               │ the best media to use if you have no overriding reason for using other  │
+               │ media.                                                                  │
+               │ ┌─────────────────────────────────────────────────────────────────────┐ │
+               │ │   1 CD/DVD      Install from a FreeBSD CD/DVD                       │ │
+               │ │   2 HTTP Proxy  Install from an FTP server through an HTTP proxy    │ │
+               │ │   3 HTTP Direct Install from an HTTP server                         │ │
+               │ │   4 Directory   Install from the existing filesystem                │ │
+               │ │   6 NFS         Install over NFS                                    │ │
+               │ │   6 DOS         Install from a DOS partition                        │ │
+               │ │   7 UFS         Install from a UFS partition                        │ │
+               │ │   8 USB         Install from a USB drive                            │ │
+               │ │   X Options     View/Set various media options                      │ │
+               │ └─────────────────────────────────────────────────────────────────────┘ │
+               ├─────────────────────────────────────────────────────────────────────────┤
+               │                   [  OK  ]     [Cancel]     [ Help ]                    │
+               └────── Choose Help for more information on the various media types ──────┘
+                 
+```
+
+
+| **选项**        | **说明**                                       |  
+|--------------|--------------------------------------------|  
+| **CD/DVD**   | 从 FreeBSD CD/DVD 安装                              |  
+| **HTTP Proxy**| 通过 HTTP 代理从 FTP 服务器安装                       |  
+| **HTTP Direct**| 从 HTTP 服务器直接安装                             |  
+| **Directory**  | 从现有文件系统安装                               |  
+| **NFS**        | 通过 NFS 安装                                   |  
+| **DOS**        | 从 DOS 分区安装                                 |  
+| **UFS**        | 从 UFS 分区安装                                 |  
+| **USB**        | 从 USB 设备安装                               |  
+| **Options**    | 查看/设置各种媒体选项                           |  
+
+
+### 3 HTTP Direct
+
+请选择最适合您的站点，或者选择其他的以指定不同的选项。 “Main Site”会通过 GeoDNS 将用户引导到最近的项目管理镜像站点（它们提供完整的分发文件且支持 IPv4 和 IPv6）。所有其他站点被称为“社区镜像站”；并非所有列出的站点都提供超过基础分发包的内容。请选择一个站点！
+
+```sh
+              ┌─────────────┤Please select a FreeBSD HTTP distribution site├─────────────┐
+              │ Please select the best suitable site for you or "other" if you want to   │
+              │ specify a different choice. The "Main Site" directs users to the nearest │
+              │ project managed mirror via GeoDNS (they carry the full range of possible │
+              │ distributions and support both IPv4 and IPv6). All other sites are known │
+              │ as "Community Mirrors"; not every site listed here carries more than the │
+              │ base distribution kits. Select a site!                                   │
+              │ ┌──────────────────────────────────────────────────────────────────────┐ │
+              │ │      pkg Main Site (GeoDNS) pkg.freebsd.org                          │ │
+              │ │      URL                    Specify some other http site by URL      │ │
+              │ └──────────────────────────────────────────────────────────────────────┘ │
+              ├──────────────────────────────────────────────────────────────────────────┤
+              │                           [  OK  ]     [Cancel]                          │
+              └───────────────────────────── Select a site! ───────────
+```
+
+若选择“pkg Main Site (GeoDNS) pkg.freebsd.org”，将会还原到 FreeBSD 官方镜像站；
+
+若选择“URL                    Specify some other http site by URL”：
+
+```sh
+                        ┌──────────────────┤Package Selection├──────────────────┐
+                        │ Please specify the URL of a FreeBSD distribution on a │
+                        │ remote http site.                                     │
+                        │ A URL looks like this: http://<hostname>/<path>       │
+                        │ ┌───────────────────────────────────────────────────┐ │
+                        │ │                                                   │ │
+                        │ └───────────────────────────────────────────────────┘ │
+                        ├───────────────────────────────────────────────────────┤
+                        │                 [  OK  ]     [Cancel]
+```
+
+指定国内镜像站不起作用。
+
+### Options
+
+```sh
+                                  ──────────┤Options Editor├───────────┐
+                                 │ ┌─────────────────────────────────┐ │
+                                 │ │  NFS Secure      NO             │ │
+                                 │ │  NFS Slow        NO             │ │
+                                 │ │  NFS TCP         NO             │ │
+                                 │ │  NFS version 3   YES            │ │
+                                 │ │  Debugging       NO             │ │
+                                 │ │  Yes to All      NO             │ │
+                                 │ │  DHCP            NO             │ │
+                                 │ │  IPv6            NO             │ │
+                                 │ │  Editor          /usr/bin/ee    │ │
+                                 │ │  Release Name    15.0-CURRENT   │ │
+                                 │ │  Media Type      <not yet set>  │ │
+                                 │ │  Media Timeout   300            │ │
+                                 │ │  Package Temp    /var/tmp       │ │
+                                 │ │  Re-scan Devices <*>            │ │
+                                 │ │  Use Defaults    [RESET!]       │ │
+                                 │ └─────────────────────────────────┘ │
+                                 ├─────────────────────────────────────┤
+                                 │   [  OK  ]   [ Done ]   [ Help ]    │
+                                 └──── Press arrows, TAB or ENTER ─────
+```
+
+| **选项**             | **说明**              |  
+|--------------------|-------------------|  
+| **NFS Secure**      | NFS 安全                |  
+| **NFS Slow**        | NFS Slow，不知道是什么             |  
+| **NFS TCP**         | NFS TCP                |  
+| **NFS version 3**   | NFS 版本 3              |  
+| **Debugging**       | 调试                |  
+| **Yes to All**      | 全部选是               |  
+| **DHCP**            | DHCP               |  
+| **IPv6**            | IPv6               |  
+| **Editor**          | 编辑器     |  
+| **Release Name**    | RELEASE 版本      |  
+| **Media Type**      | 介质类型    |  
+| **Media Timeout**   | 介质超时              |  
+| **Package Temp**    |软件包缓存       |  
+| **Re-scan Devices** |重新扫描设备          |  
+| **Use Defaults**    | 还原默认配置        |  
+
+## 4 Root Password root 密码
+
+修改 root 密码用的。
+
+输入的密码在屏幕上会显示为“***”这种类型。~~真是少见，居然这次有密码回显。~~
+
+```sh
+                        ┌────────────────────┤Root Password├───────────────────┐
+                        │ Enter New Password                                   │
+                        │ ┌──────────────────────────────────────────────────┐ │
+                        │ │                                                  │ │
+                        │ └──────────────────────────────────────────────────┘ │
+                        ├──────────────────────────────────────────────────────┤
+                        │                 [  OK  ]     [Cancel]                │
+                        └──── Use alpha-numeric, punctuation, TAB or ENTER ────┘
+
+```
+
+
+## 5 Disk Management 磁盘管理
+
+```sh
+                         ┌────────────────────┤Partition Editor├───────────────┐
+                         │ Create partitions for FreeBSD, F1 for help.         │
+                         │ No changes will be made until you select Finish.    │
+                         │                                                     │
+                         │                                                     │
+                         ├─────────────────────────────────────────────────────┤
+                         │  mmcsd0          116 GB    GPT                      │
+                         │    mmcsd0p1      260 MB    efi                      │
+                         │    mmcsd0p2      116 GB    freebsd-zfs              │
+                         │  mmcsd0boot0     4.0 MB                             │
+                         │  mmcsd0boot1     4.0 MB                             │
+                         │  nda0            466 GB    GPT                      │
+                         │    nda0p1        277 MB    efi                      │
+                         │    nda0p2        200 GB    ms-basic-data            │
+                         │    nda0p3        148 GB    ms-basic-data            │
+                         │    nda0p4        85 GB     ms-basic-data            │
+                         ├───vvv────────────────────────────────────────83%────┤
+                         ├─────────────────────────────────────────────────────┤
+                         │[Create] [Delete] [Modify] [Revert] [ Auto ] [Finish]│
+```
+
+这个和 `bsdinstall` 中出现的分区管理是一致的。操作方法也一样。
