--- a/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
+++ b/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
@@ -1,5 +1,10 @@
 # 第 24.3 节 bsdconfig
 
+`bsdconfig` 源代码在 <https://github.com/freebsd/freebsd-src/tree/main/usr.sbin/bsdconfig>
+
+>**技巧**
+>
+>`bsdconfig` 也支持纯字符命令行，参见 [bsdconfig(8)](https://man.freebsd.org/cgi/man.cgi?bsdconfig(8))。
 
 ## `bsdconfig` 主菜单
 
@@ -320,3 +325,89 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 ```
 
 这个和 `bsdinstall` 中出现的分区管理是一致的。操作方法也一样。
+
+## 6 Login/Group Management 登录管理/组管理
+
+
+```sh
+                                 ┌──────┤Login/Group Management├──────┐
+                                 │ ┌────────────────────────────────┐ │
+                                 │ │        X Exit                  │ │
+                                 │ │        1 Add Login             │ │
+                                 │ │        2 Edit/View Login       │ │
+                                 │ │        3 Delete Login          │ │
+                                 │ │        - -                     │ │
+                                 │ │        4 Add Group             │ │
+                                 │ │        5 Edit/View Group       │ │
+                                 │ │        6 Delete Group          │ │
+                                 │ └────────────────────────────────┘ │
+                                 ├────────────────────────────────────┤
+                                 │   [  OK  ]   [Cancel]   [ Help ]   │
+                                 └──── Press arrows, TAB or ENTER ────┘
+                                   
+```
+
+
+| 操作 | 说明 |
+| --- | --- |
+| X Exit | 退出 |
+| Add Login | 添加登录 |
+| Edit/View Login | 编辑登录用户/查看登录用户 |
+| Delete Login | 删除登录用户 |
+| - - | 分隔符 |
+| Add Group | 添加组 |
+| Edit/View Group | 编辑组/查看组 |
+| Delete Group | 删除组 |
+
+###  “Edit/View Login”编辑登录用户
+
+以我创建的用户账户 ykla 为例：
+
+```sh
+                              ┌──────────┤Edit/View User: ykla├───────────┐
+                              │ Choose Save/Exit when finished or Cancel. │
+                              │ ┌───────────────────────────────────────┐ │
+                              │ │     X Save/Exit                       │ │
+                              │ │     1 Login: ykla                     │ │
+                              │ │     2 Full Name: User &               │ │
+                              │ │     3 Password: -----                 │ │
+                              │ │     4 UID: 1001                       │ │
+                              │ │     5 Group ID: 1001 (ykla)           │ │
+                              │ │     6 Member of Groups: wheel         │ │
+                              │ │     7 Login Class:                    │ │
+                              │ │     8 Password Expires on:            │ │
+                              │ │     9 Account Expires on:             │ │
+                              │ │     A Home Directory: /home/ykla      │ │
+                              │ │     B Shell: /bin/sh                  │ │
+                              │ │     - Create Home Directory: N/A      │ │
+                              │ │     D Create Dotfiles: No             │ │
+                              │ └───────────────────────────────────────┘ │
+                              ├───────────────────────────────────────────┤
+                              │           [  OK  ]     [Cancel]           │
+                              └─────── Press arrows, TAB or ENTER ────────┘
+                                
+```
+
+可以修改 ykla 的以下信息：
+
+
+| 项目 | 说明 |
+| --- | --- |
+| X Save/Exit | 保存并退出 |
+| Login: ykla | 登录名：ykla |
+| Full Name: User & | 姓名：User & |
+| Password: ----- | 密码：-----，可以修改密码 |
+| UID: 1001 | 用户 ID：1001 |
+| Group ID: 1001 (ykla) | 组 ID：1001（ykla） |
+| Member of Groups: wheel | 所属组：wheel |
+| Login Class: | 登录类别： |
+| Password Expires on: | 密码过期日期： |
+| Account Expires on: | 账户过期日期： |
+| Home Directory: /home/ykla | 主目录：/home/ykla |
+| Shell: /bin/sh | Shell：/bin/sh |
+| Create Home Directory: N/A | 创建主目录：N/A |
+| Create Dotfiles: No | 创建点文件：否 |
+
+### “Edit/View Group” 编辑组/查看组
+
+
