--- a/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
+++ b/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
@@ -1,4 +1,4 @@
-# 第 24.3 节 bsdconfig
+# 第 24.3 节 bsdconfig 系统配置工具
 
 `bsdconfig` 源代码在 <https://github.com/freebsd/freebsd-src/tree/main/usr.sbin/bsdconfig>
 
