--- a/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
+++ b/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
@@ -410,4 +410,30 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 
 ### “Edit/View Group” 编辑组/查看组
 
+以我创建的用户账户 ykla 所在 ykla 组为例：
 
+```sh
+                              ┌──────────┤Edit/View Group: ykla├──────────┐
+                              │ Choose Save/Exit when finished or Cancel. │
+                              │ ┌───────────────────────────────────────┐ │
+                              │ │           X Save/Exit                 │ │
+                              │ │           1 Group: ykla               │ │
+                              │ │           2 Password: -----           │ │
+                              │ │           3 Group ID: 1001            │ │
+                              │ │           4 Group Members:            │ │
+                              │ └───────────────────────────────────────┘ │
+                              ├───────────────────────────────────────────┤
+                              │           [  OK  ]     [Cancel]           │
+                              └─────── Press arrows, TAB or ENTER ────────┘
+                                
+```
+
+| 项目 | 内容 |
+| --- | --- |
+| X Save/Exit | 保存并退出 |
+| Group: ykla | 组：ykla |
+| Password: ----- | 密码：----- |
+| Group ID: 1001 | 组ID：1001 |
+| Group Members: | 组成员： |
+
+## 7 Console 终端
